# dummy-dvfs-simulator

./: CMakeLists.txt  README.md
scripts/: jolt.sh
simulators/: CMakeLists.txt  cpu_burner.cpp  dummy_test.cpp  thermo_jolt.cpp
src/hardware/: dvfs.h  record.h
src/utils/: util.hpp
test/: CMakeLists.txt  perfetto_async.cpp
